new scheme of quests + testing quests

--- a/heracles/tutorial.html
+++ b/heracles/tutorial.html
@@ -1,10 +1,13 @@
-<h2>Хару погибает</h2>
-<p>Семь Этерисов слушали своего отца, но в голосе в его уже не звучало музыки. Самые тихие ноты упали на землю
-    опустевающего Гимпанума, и из них родились Вериты</p>
+<h2>Хару, творец мира, погибает</h2>
+<p>Сотворил он мир и детей своих, семерых Этерисов, из звука, ибо сам был им, но не смог стерпеть дисгармонии своего
+    творения и истощил свои силы.
+    Этерисы, разделённые враждой, не смогли ничего сделать, дабы помочь отцу, ибо нет в них единства. Тогда призвали они
+    Веритов - слепили их как из глины, но только из звука, и пустили в мир.</p>
 <hr />
 <hint color="gray" icon="heracles:quest_book" title="Note:">
-    <p>Старшие сиблинги Веритов - Этерисы дают поручения им. Сила Этерисов в громкости и чёткости их музыки, но Вериты
-        ближе к материальному миру, поэтому только они могут поддерживать гармонию своими небольшими деяниями.</p>
+    <p>Вериты имеют волю влиять на мир, так же как и Этерисы. Но влияние Этерисов слишком широко - музыку мира нужно
+        плести из мелких голосов. Только Вериты с этим справятся, и именно их голоса станут основой гармонии</p>
 </hint>
 <hr />
-<p>Только Вериты могут исцелить отца, Хару. Медленно, постепенно, нота за нотой, аккордой за аккордом.</p>
+<p>Вериты могут исцелить отца, Хару. Медленно, постепенно, нота за нотой. Могут они уничтожить Хару, и даже весь мир.
+    Вериты всемогущи, ибо сила в единении малого.</p>
